ecd update without prob

--- a/ecd/jupyter/model/API.ipynb
+++ b/ecd/jupyter/model/API.ipynb
@@ -2,29 +2,42 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Character Prediction with LSTM - Adapted for Project"
-   ],
+   "id": "465d40dd92ae93f4",
    "metadata": {
     "collapsed": false
    },
-   "id": "465d40dd92ae93f4"
+   "source": [
+    "# Character Prediction with LSTM - Adapted for Project"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
+   "id": "3152e8e57ade34ad",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:41.646053537Z",
+     "start_time": "2025-12-15T11:55:38.115218329Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package gutenberg to\n",
-      "[nltk_data]     C:\\Users\\user\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package gutenberg is already up-to-date!\n"
+      "[nltk_data]     /home/qossayrida/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/gutenberg.zip.\n"
      ]
     }
    ],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "# Add the parent directory to the path to import bundle\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '../..')))\n",
+    "\n",
     "import torch.nn.functional as F\n",
     "import json\n",
     "import nltk\n",
@@ -33,29 +46,29 @@
     "\n",
     "nltk.download('gutenberg')\n",
     "from nltk.corpus import gutenberg"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.127075600Z",
-     "start_time": "2025-06-12T10:28:18.942424100Z"
-    }
-   },
-   "id": "3152e8e57ade34ad"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 1. Characters Setup from characters.txt"
-   ],
+   "id": "2ea9a6c40b49c597",
    "metadata": {
     "collapsed": false
    },
-   "id": "2ea9a6c40b49c597"
+   "source": [
+    "# 1. Characters Setup from characters.txt"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "id": "44a67e096e4c8e69",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:41.670884012Z",
+     "start_time": "2025-12-15T11:55:41.649662649Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -76,29 +89,29 @@
     "\n",
     "print(\"Vocabulary size:\", vocab_size)\n",
     "print(\"Characters in vocabulary:\", all_chars)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.143730200Z",
-     "start_time": "2025-06-12T10:28:18.962953Z"
-    }
-   },
-   "id": "44a67e096e4c8e69"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 2. Data Cleaning Functions"
-   ],
+   "id": "d7fef3bddeda46cb",
    "metadata": {
     "collapsed": false
    },
-   "id": "d7fef3bddeda46cb"
+   "source": [
+    "# 2. Data Cleaning Functions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "id": "bd0bd64f060ad36d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:41.681224820Z",
+     "start_time": "2025-12-15T11:55:41.673428536Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def clean_text(text, allowed_chars):\n",
@@ -107,29 +120,29 @@
     "    # Filter to allowed characters\n",
     "    text = \"\".join(ch for ch in text if ch in allowed_chars)\n",
     "    return text"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.154319100Z",
-     "start_time": "2025-06-12T10:28:18.969922500Z"
-    }
-   },
-   "id": "bd0bd64f060ad36d"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 3. Training Function"
-   ],
+   "id": "ffad1f272bbaf347",
    "metadata": {
     "collapsed": false
    },
-   "id": "ffad1f272bbaf347"
+   "source": [
+    "# 3. Training Function"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "id": "1029c7c0b135c6c9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:41.695752546Z",
+     "start_time": "2025-12-15T11:55:41.682197427Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def train_model(model, dataset, epochs=5, seq_len=10, batch_size=64):\n",
@@ -173,29 +186,29 @@
     "            total_loss += loss.item()\n",
     "\n",
     "        print(f\"Epoch {epoch + 1}/{epochs}, Loss: {total_loss:.4f}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.158995400Z",
-     "start_time": "2025-06-12T10:28:18.996231800Z"
-    }
-   },
-   "id": "1029c7c0b135c6c9"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 4. Prediction Function"
-   ],
+   "id": "d1c7d1dbeced1657",
    "metadata": {
     "collapsed": false
    },
-   "id": "d1c7d1dbeced1657"
+   "source": [
+    "# 4. Prediction Function"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "id": "cc4e3b27ed30df32",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:41.706466745Z",
+     "start_time": "2025-12-15T11:55:41.697159533Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def predict_next_chars(model, sentence, top_k=None):\n",
@@ -232,29 +245,29 @@
     "                result[idx2char[idx]] = round(prob.item(), 4)\n",
     "        \n",
     "        return result\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.170044900Z",
-     "start_time": "2025-06-12T10:28:19.007456900Z"
-    }
-   },
-   "id": "cc4e3b27ed30df32"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 5. Save Model"
-   ],
+   "id": "932eb1fa93523b7e",
    "metadata": {
     "collapsed": false
    },
-   "id": "932eb1fa93523b7e"
+   "source": [
+    "# 5. Save Model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "id": "34236fbca9178af1",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:41.720508876Z",
+     "start_time": "2025-12-15T11:55:41.707637370Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def save_model(model, path=\"../../model/api/char_predictor.pth\"):\n",
@@ -262,110 +275,144 @@
     "    os.makedirs(os.path.dirname(path), exist_ok=True)\n",
     "    torch.save(model.state_dict(), path)\n",
     "    print(f\"Model saved to {path}.\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.170044900Z",
-     "start_time": "2025-06-12T10:28:19.017218200Z"
-    }
-   },
-   "id": "34236fbca9178af1"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# 6. Train the Model"
-   ],
+   "id": "325ba9cb9d3bdf99",
    "metadata": {
     "collapsed": false
    },
-   "id": "325ba9cb9d3bdf99"
+   "source": [
+    "# 6. Train the Model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
+   "id": "f8ebb4871d36fd25",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-15T11:55:42.902579427Z",
+     "start_time": "2025-12-15T11:55:41.721977448Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from ../../model/api/char_predictor.pth.\n",
+      "================================================================================\n",
+      "LOADING BOOKS FROM GUTENBERG CORPUS\n",
+      "================================================================================\n",
+      "✓ Loaded: austen-emma.txt                -    887,071 characters\n",
+      "✓ Loaded: bible-kjv.txt                  -  4,332,554 characters\n",
+      "✓ Loaded: blake-poems.txt                -     38,153 characters\n",
+      "✓ Loaded: melville-moby_dick.txt         -  1,242,990 characters\n",
+      "✓ Loaded: shakespeare-macbeth.txt        -    100,351 characters\n",
+      "✓ Loaded: austen-sense.txt               -    673,022 characters\n",
+      "✓ Loaded: shakespeare-hamlet.txt         -    162,881 characters\n",
+      "✓ Loaded: chesterton-thursday.txt        -    320,525 characters\n",
+      "✓ Loaded: edgeworth-parents.txt          -    935,158 characters\n",
+      "✓ Loaded: carroll-alice.txt              -    144,395 characters\n",
       "\n",
-      "Prediction Probabilities for all characters:\n",
-      "{\n",
-      "  \"H\": 0.9564,\n",
-      "  \" \": 0.0149,\n",
-      "  \"I\": 0.0094,\n",
-      "  \"A\": 0.0045,\n",
-      "  \"O\": 0.0034,\n",
-      "  \"U\": 0.0025,\n",
-      "  \"E\": 0.0017,\n",
-      "  \"R\": 0.0012,\n",
-      "  \"T\": 0.0012,\n",
-      "  \"W\": 0.0011,\n",
-      "  \"C\": 0.0006,\n",
-      "  \"S\": 0.0006,\n",
-      "  \"Y\": 0.0005,\n",
-      "  \"1\": 0.0004,\n",
-      "  \"2\": 0.0004,\n",
-      "  \"B\": 0.0002,\n",
-      "  \"J\": 0.0001,\n",
-      "  \"K\": 0.0001,\n",
-      "  \"P\": 0.0001,\n",
-      "  \"3\": 0.0001,\n",
-      "  \"4\": 0.0001,\n",
-      "  \"8\": 0.0001,\n",
-      "  \"9\": 0.0001,\n",
-      "  \"D\": 0.0,\n",
-      "  \"F\": 0.0,\n",
-      "  \"G\": 0.0,\n",
-      "  \"L\": 0.0,\n",
-      "  \"M\": 0.0,\n",
-      "  \"N\": 0.0,\n",
-      "  \"Q\": 0.0,\n",
-      "  \"V\": 0.0,\n",
-      "  \"X\": 0.0,\n",
-      "  \"Z\": 0.0,\n",
-      "  \"5\": 0.0,\n",
-      "  \"6\": 0.0,\n",
-      "  \"7\": 0.0,\n",
-      "  \"_\": 0.0\n",
-      "}\n",
+      "================================================================================\n",
+      "DATA DETAILS\n",
+      "================================================================================\n",
+      "Number of books:              10\n",
+      "Total raw characters:         8,837,100\n",
+      "Total cleaned characters:     8,253,702\n",
+      "Characters removed:           583,398 (6.60%)\n",
+      "Vocabulary size:              37\n",
+      "Allowed characters:           ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_ \n",
       "\n",
-      "Most likely next character: H\n",
-      "Completed sentence: TH\n",
+      "Top 10 most frequent characters:\n",
+      "  '' '':  1,492,463 (18.08%)\n",
+      "  'E':    838,115 (10.15%)\n",
+      "  'T':    622,574 ( 7.54%)\n",
+      "  'A':    550,217 ( 6.67%)\n",
+      "  'O':    506,811 ( 6.14%)\n",
+      "  'H':    504,386 ( 6.11%)\n",
+      "  'N':    458,001 ( 5.55%)\n",
+      "  'I':    426,556 ( 5.17%)\n",
+      "  'S':    410,052 ( 4.97%)\n",
+      "  'R':    368,341 ( 4.46%)\n",
       "\n",
-      "Number of probability outputs: 37\n",
-      "✓ Output matches vocabulary size\n"
+      "Sample of cleaned text (first 200 characters):\n",
+      "EMMA BY JANE AUSTEN 1816VOLUME ICHAPTER IEMMA WOODHOUSE HANDSOME CLEVER AND RICH WITH A COMFORTABLE HOMEAND HAPPY DISPOSITION SEEMED TO UNITE SOME OF THE BEST BLESSINGSOF EXISTENCE AND HAD LIVED NEARL...\n",
+      "================================================================================\n"
      ]
     }
    ],
    "source": [
-    "mode = \"predict\"  # Change to \"predict\" when needed\n",
+    "mode = \"train\"  # Change to \"predict\" when needed\n",
     "\n",
     "if mode == \"train\":\n",
     "    model = CharPredictor(vocab_size)\n",
     "\n",
-    "    # Load dataset\n",
+    "    # Load dataset - 10 books from Gutenberg corpus\n",
     "    book_ids = [\n",
     "        'austen-emma.txt',\n",
     "        'bible-kjv.txt',\n",
-    "#        'blake-poems.txt',\n",
-    "#        'melville-moby_dick.txt',\n",
-    "#        'shakespeare-macbeth.txt',\n",
+    "        'blake-poems.txt',\n",
+    "        'melville-moby_dick.txt',\n",
+    "        'shakespeare-macbeth.txt',\n",
+    "        'austen-sense.txt',\n",
+    "        'shakespeare-hamlet.txt',\n",
+    "        'chesterton-thursday.txt',\n",
+    "        'edgeworth-parents.txt',\n",
+    "        'carroll-alice.txt',\n",
     "    ]\n",
     "\n",
     "    # Merge all books\n",
     "    text = \"\"\n",
+    "    book_stats = []\n",
+    "    \n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"LOADING BOOKS FROM GUTENBERG CORPUS\")\n",
+    "    print(\"=\" * 80)\n",
+    "    \n",
     "    for book_id in book_ids:\n",
-    "        text += gutenberg.raw(book_id)\n",
+    "        book_text = gutenberg.raw(book_id)\n",
+    "        raw_length = len(book_text)\n",
+    "        text += book_text\n",
+    "        book_stats.append({\n",
+    "            'name': book_id,\n",
+    "            'raw_length': raw_length\n",
+    "        })\n",
+    "        print(f\"✓ Loaded: {book_id:<30} - {raw_length:>10,} characters\")\n",
     "\n",
     "    # Clean the text according to our requirements\n",
+    "    raw_total_length = len(text)\n",
     "    text = clean_text(text, set(all_chars))\n",
+    "    cleaned_length = len(text)\n",
+    "    removed_chars = raw_total_length - cleaned_length\n",
     "    \n",
-    "    print(f\"Training dataset size: {len(text)} characters.\")\n",
-    "    print(f\"Sample of cleaned text: {text[:100]}...\")\n",
+    "    print(\"\\n\" + \"=\" * 80)\n",
+    "    print(\"DATA DETAILS\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(f\"Number of books:              {len(book_ids)}\")\n",
+    "    print(f\"Total raw characters:         {raw_total_length:,}\")\n",
+    "    print(f\"Total cleaned characters:     {cleaned_length:,}\")\n",
+    "    print(f\"Characters removed:           {removed_chars:,} ({removed_chars/raw_total_length*100:.2f}%)\")\n",
+    "    print(f\"Vocabulary size:              {vocab_size}\")\n",
+    "    print(f\"Allowed characters:           {all_chars}\")\n",
+    "    \n",
+    "    # Count character frequency in cleaned text\n",
+    "    char_freq = {}\n",
+    "    for ch in text:\n",
+    "        char_freq[ch] = char_freq.get(ch, 0) + 1\n",
+    "    \n",
+    "    print(f\"\\nTop 10 most frequent characters:\")\n",
+    "    sorted_freq = sorted(char_freq.items(), key=lambda x: x[1], reverse=True)[:10]\n",
+    "    for char, count in sorted_freq:\n",
+    "        display_char = repr(char) if char == ' ' else char\n",
+    "        print(f\"  '{display_char}': {count:>10,} ({count/cleaned_length*100:>5.2f}%)\")\n",
+    "    \n",
+    "    print(f\"\\nSample of cleaned text (first 200 characters):\")\n",
+    "    print(f\"{text[:200]}...\")\n",
+    "    print(\"=\" * 80)\n",
     "\n",
     "    # Train the model\n",
     "    train_model(model, text, epochs=10)\n",
@@ -400,15 +447,7 @@
     "        print(\"✓ Output matches vocabulary size\")\n",
     "    else:\n",
     "        print(f\"✗ Output size ({len(result)}) does not match vocabulary size ({vocab_size})\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-06-12T10:28:19.170044900Z",
-     "start_time": "2025-06-12T10:28:19.051581100Z"
-    }
-   },
-   "id": "f8ebb4871d36fd25"
+   ]
   }
  ],
  "metadata": {
