--- a/ecd/jupyter/model/test_api.ipynb
+++ b/ecd/jupyter/model/test_api.ipynb
@@ -2,31 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-30T08:58:04.549969400Z",
-     "start_time": "2025-06-30T08:57:58.442927900Z"
+     "end_time": "2025-12-14T11:28:21.294799600Z",
+     "start_time": "2025-12-14T11:28:19.678908781Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 37 characters from ../../data/characters.txt (including added space)\n",
-      "Vocabulary size: 37\n",
-      "Characters in vocabulary: ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_ \n",
-      "Reading sentences from: ../../data/sentences.txt\n",
-      "Read 400 sentences.\n",
-      "Model loaded from ../../model/api/char_predictor.pth.\n"
-     ]
-    }
-   ],
    "source": [
-    "from bundle.DataCraft import * \n",
+    "import sys\n",
+    "import os\n",
+    "# Add the parent directory to the path to import bundle\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '../..')))\n",
+    "\n",
+    "from bundle.DataCraft import *\n",
     "from bundle.ApiCraft  import * \n",
     "import torch.nn.functional as F\n",
     "\n",
@@ -74,7 +64,7 @@
     "\n",
     "\n",
     "# Read Sentences\n",
-    "sentences_filepath = \"../../data/sentences.txt\"             # Input: Sentences file\n",
+    "sentences_filepath = \"../../data/sentences_train.txt\"             # Input: Sentences file\n",
     "\n",
     "sentences = []\n",
     "print(f\"Reading sentences from: {sentences_filepath}\")\n",
@@ -94,21 +84,25 @@
     "    exit()\n",
     "\n",
     "model = load_nlp_model(vocab_size)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating model accuracy on next character prediction...\n",
-      "Accuracy on next-character prediction: 64.95%\n"
+      "Loaded 37 characters from ../../data/characters.txt (including added space)\n",
+      "Vocabulary size: 37\n",
+      "Characters in vocabulary: ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_ \n",
+      "Reading sentences from: ../../data/sentences_train.txt\n",
+      "Read 400 sentences.\n",
+      "Model loaded from ../../model/api/char_predictor.pth.\n"
      ]
     }
    ],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
    "source": [
     "# ===========================\n",
     "# Accuracy Evaluation\n",
@@ -151,11 +145,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-30T08:58:10.114158100Z",
-     "start_time": "2025-06-30T08:58:04.547456300Z"
+     "end_time": "2025-12-14T11:28:25.123706438Z",
+     "start_time": "2025-12-14T11:28:21.297055291Z"
     }
    },
-   "id": "b33c6120f089804b"
+   "id": "b33c6120f089804b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating model accuracy on next character prediction...\n",
+      "Accuracy on next-character prediction: 64.95%\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
